--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,7 +23,8 @@
   },
   "permissions": [
     "storage",
-    "tabs"
+    "tabs",
+    "scripting"
   ],
   "host_permissions": [
     "<all_urls>"
