--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "Browser Profiler",
   "description": "Chrome extension to profile browser usage",
   "version": "1.0",
-  "action": {
+  "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
@@ -19,7 +19,9 @@
     }
   ],
   "background": {
-    "service_worker": "js/background.js"
+    "scripts": [
+      "js/background.js"
+    ]
   },
   "permissions": [
     "storage",
