--- a/package.json
+++ b/package.json
@@ -26,11 +26,17 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.7.3",
     "glob": "^7.1.6",
     "jest": "^27.2.1",
     "jest-chrome": "^0.8.0",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
+    "postcss-preset-env": "^8.0.1",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2 ",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.7",
     "ts-jest": "^27.0.5",
     "ts-loader": "^8.0.0",
     "typescript": "^4.4.3 ",
